Reduce join game box width and fix centering issue on mobile device #11

--- a/src/app/home/components/JoinGame.module.css
+++ b/src/app/home/components/JoinGame.module.css
@@ -1,5 +1,4 @@
 .joinGameContainer {
-  width: 50dvw;
   margin: auto;
 }
 
@@ -14,7 +13,7 @@
   border-radius: 5px;
   box-shadow: 2px 2px 15px 2px rgb(189, 189, 189);
   padding: 30px;
-  width: 300px;
+  width: 250px;
   margin: auto;
 }
 
